adding scrollama to flip gifs

--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -50,6 +50,7 @@
             height auto
             display block
             pointer-events auto
+            object-fit cover
             &:nth-child(even)
                 justify-self start
                 transform translateX(-4%)
