--- a/src/css/story/nav.styl
+++ b/src/css/story/nav.styl
@@ -8,6 +8,8 @@
     justify-content space-between
     padding 1rem 
     z-index 20
+    max-height 150px
+    overflow hidden
     p
         margin 0
         font-family $national-narrow
