adding style updates

--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -31,10 +31,18 @@
         .annotation--desktop
             display grid
             grid-template-columns 1
+            margin-left 4rem
+            h3 
+                font-weight bold 
+                font-family $national
+                text-transform capitalize
+                set-type-size('xx-large')
 
             ul 
                 li
                     pointer-events all
+                    set-type-size('medium')
+                    font-family $national-narrow
 
 
 
