--- a/src/css/utils/variables.styl
+++ b/src/css/utils/variables.styl
@@ -44,9 +44,9 @@ $gray-light = #c9c9c9
 $off-white = #f4f4f4
 $white = #fff
 
-$bg = #fff
-$fg = $off-black
-$primary= $off-black
+$bg = #ECF2F6
+$fg = #336A95
+$primary= #336A95
 
 $column-width = 56.25rem
 
