--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -17,12 +17,11 @@
     max-width 1130px
     pointer-events none
 
-    .annotations--desktop 
-        max-width 300px
 
     .islands 
         display flex 
         flex-direction column
+        margin 0 auto
 
         .g-island 
             display flex 
@@ -32,6 +31,7 @@
             display grid
             grid-template-columns 1
             margin-left 4rem
+            flex-grow 1
             h3 
                 font-weight bold 
                 font-family $national
@@ -57,6 +57,7 @@
         pointer-events none
         z-index auto
         max-width 550px
+        flex-grow 2
         +mq('bp-5')
             &:nth-child(even)
                 margin-top -10vh
