--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -32,6 +32,10 @@
             grid-template-columns 1
             margin-left 4rem
             flex-grow 1
+            .g-anno 
+                opacity 0.3
+                &.in-focus 
+                    opacity 1
             h3 
                 font-weight bold 
                 font-family $national
