--- a/src/html/partials/story/layout.hbs
+++ b/src/html/partials/story/layout.hbs
@@ -1,5 +1,4 @@
 <section class='map' data-js='arrangement'>
     <div class='islands' data-js='arrangement__islands'></div>
-    <div class='annotations--desktop' data-js='arrangement__annotations--desktop'></div>
-    <div class='annotations--mobile' data-js='arrangement__annotations--mobile'></div>
+    {{> story/nav }}
 </section>
