--- a/src/html/partials/story/modal.hbs
+++ b/src/html/partials/story/modal.hbs
@@ -12,16 +12,16 @@
     <div class='modal__info'>
         <h3 class='modal__info-animal'></h3>
         <p class='modal__info-facility'></p>
-        <p class='modal__info-help'>Help support the <span class='facility'></span> by:</p>
+        <p class='modal__info-help'>Help support <span class='facility'></span> by:</p>
         <ul>
             <li><a class='donate'>Donating</a></li>
             <li><a class='adopt'>Adopting an Animal</a></li>
         </ul>
 
         <div class='modal__info-fact'>
-            <p class='fact__intro'>Info from the <span class='facility'></span>:</p>
+            <p class='fact__intro'>According to <span class='facility'></span>:</p>
             <p class='fact__text'></p>
-            <a class='fact__link'>Click to Learn More</a>
+            <a class='fact__link'>Learn More on Their Website</a>
         </div>
 
     </div>
