--- a/src/css/story/nav.styl
+++ b/src/css/story/nav.styl
@@ -25,6 +25,7 @@
                 text-transform capitalize
                 set-type-size('x-large')
                 margin-top 0.25rem
+                pointer-events all
 
             ul 
                 display flex 
