--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -43,6 +43,7 @@
                     font-family $national
                     text-transform capitalize
                     set-type-size('xx-large')
+                    pointer-events all
 
                 ul 
                     li
