--- a/src/html/partials/story/modal.hbs
+++ b/src/html/partials/story/modal.hbs
@@ -1,28 +1,34 @@
 <section class='modal is-hidden' data-js='modal'>
-    <div class='modal__video'>
-        <div class='modal__video--large'>
-            <p class='modal__video--label'></p>
-            <img class='large'>
+    <div class='modal__quit'>
+        <img inline src='arrow-left.svg'>
+        <p>Return to the zoo</p>
+    </div>
+    <div class='modal__content'>
+        <div class='modal__video'>
+            <div class='modal__video--large'>
+                <img class='large'>
+            </div>
+
+            <div class='modal__video--carousel'>
+            </div>
         </div>
 
-        <div class='modal__video--carousel'>
+        <div class='modal__info'>
+            <h3 class='modal__info-animal'></h3>
+            <p class='modal__info-facility'></p>
+            <p class='modal__info-help'>Help support <span class='facility'></span> by:</p>
+            <ul>
+                <li><a class='donate'>Donating</a></li>
+                <li><a class='adopt'>Adopting an Animal</a></li>
+            </ul>
+
+            <div class='modal__info-fact'>
+                <p class='fact__intro'>According to <span class='facility'></span>:</p>
+                <p class='fact__text'></p>
+                <a class='fact__link'>Learn More on Their Website</a>
+            </div>
+
         </div>
     </div>
 
-    <div class='modal__info'>
-        <h3 class='modal__info-animal'></h3>
-        <p class='modal__info-facility'></p>
-        <p class='modal__info-help'>Help support <span class='facility'></span> by:</p>
-        <ul>
-            <li><a class='donate'>Donating</a></li>
-            <li><a class='adopt'>Adopting an Animal</a></li>
-        </ul>
-
-        <div class='modal__info-fact'>
-            <p class='fact__intro'>According to <span class='facility'></span>:</p>
-            <p class='fact__text'></p>
-            <a class='fact__link'>Learn More on Their Website</a>
-        </div>
-
-    </div>
 </section>
