--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -44,6 +44,7 @@
                     text-transform capitalize
                     set-type-size('xx-large')
                     pointer-events all
+                    cursor pointer
 
                 ul 
                     li
@@ -53,6 +54,7 @@
                         display flex 
                         align-items center
                         font-weight normal
+                        cursor pointer
                         &.selected
                             font-weight bold 
                         .video--icon 
@@ -92,7 +94,8 @@
             margin 0 auto
             max-width 1228px
             pointer-events none
-            z-index 10
+            &-top
+                z-index 10
         .cam__display
             width 81%
             height auto
@@ -101,12 +104,13 @@
             object-fit cover
             filter saturate(0.25)
             transition filter 300ms ease-in-out
+            cursor pointer
             &:nth-child(even)
-                justify-self start
-                transform translateX(-4%)
-            &:nth-child(odd)
-                transform translateX(4%)
                 justify-self end
+                transform translateX(4%)
+            &:nth-child(odd)
+                transform translateX(-4%)
+                justify-self start
                 // transform translateX(140px)
             &.in-focus
                 filter saturate(1)
