added rough intro

--- a/src/css/story/intro.styl
+++ b/src/css/story/intro.styl
@@ -1,11 +1,15 @@
 .intro
 	margin 0 auto
 	padding 6rem 1rem 3rem 1rem
+	text-align center
 
 	&__hed
 		max-width 60rem
 		margin 0 auto
 		text-align center
+		set-type-size('xxxx-large')
+		font-weight bold
+		font-family $national
 		
 	&__dek
 		max-width $column-width
@@ -25,3 +29,13 @@
 		margin 0 auto
 		margin-top 1rem
 		text-align center
+
+	&__text 
+		max-width $column-width
+		margin 3rem auto 0
+
+	.prose--big 
+		padding 0 1rem
+		margin 0 auto
+		set-type-size('x-large')
+
