--- a/src/css/utils/presets.styl
+++ b/src/css/utils/presets.styl
@@ -21,8 +21,9 @@ set-type-class(all, true)
 
 .prose
 	max-width $column-width
-	margin 0 auto
+	margin 1rem auto 0
 	padding 0 1rem
+	set-type-size('medium')
 
 .media-overlay
 	position absolute
