--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -103,7 +103,9 @@
             pointer-events auto
             object-fit cover
             filter saturate(0.25)
-            transition filter 300ms ease-in-out
+            transform scale(1)
+            transform-origin center
+            transition filter, transform 300ms ease-in-out
             cursor pointer
             &:nth-child(even)
                 justify-self end
@@ -114,7 +116,9 @@
                 // transform translateX(140px)
             &.in-focus
                 filter saturate(1)
-                transition filter 300ms ease-in-out
+                transform scale(1.05)
+                transform-origin center
+                transition filter, transform 300ms ease-in-out
 
 
     +mq('bp-5')
