update dev version

--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -109,9 +109,9 @@
             cursor pointer
             &:nth-child(even)
                 justify-self end
-                transform translateX(4%)
+                margin-right 4%
             &:nth-child(odd)
-                transform translateX(-4%)
+                margin-left -4%
                 justify-self start
                 // transform translateX(140px)
             &.in-focus
