--- a/src/css/story/modal.styl
+++ b/src/css/story/modal.styl
@@ -32,7 +32,7 @@
         flex-direction column-reverse
         max-width 50rem
         margin 0 auto
-        &:mq('bp-5')
+        +mq('bp-5')
             flex-direction row
     &__video
         flex 2
