--- a/src/html/partials/story/nav.hbs
+++ b/src/html/partials/story/nav.hbs
@@ -1,4 +1,6 @@
 <section class='navigation' data-js='navigation'>
     <div class='animal'></div>
-    <div class='globe'></div>
+    <div class='globe globe--mobile' data-globe='mobile'>
+        <svg class='globe__svg--mobile'></svg>
+    </div>
 </section>
