--- a/src/html/partials/story/layout.hbs
+++ b/src/html/partials/story/layout.hbs
@@ -1,4 +1,5 @@
 <section class='map' data-js='arrangement'>
     <div class='islands' data-js='arrangement__islands'></div>
+    <div class='globe globe--desktop' data-globe='desktop'><svg class='globe__svg--desktop'></svg></div>
     {{> story/nav }}
 </section>
