--- a/src/css/story/parallax.styl
+++ b/src/css/story/parallax.styl
@@ -1,24 +1,17 @@
-.parallax__container
-    position: relative;
-    width: 100%;
-    height: 100%
-    overflow-x: hidden
-    perspective: 8px
-    perspective-origin: 0%
-    display: flex
+.parallax__container 
+    width 100%
+    height 100%
+    position relative
 
-.background 
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transform: translateZ(0px);
+.background
+    position fixed
+    width 100%
+    height 150%
+    min-height 100%
+    top 0
+    left 0
+    background-image url('assets/images/clouds.jpg')
+    background-repeat repeat-y
+    z-index -1000
+    opacity 0.25
 
-
-
-.foreground 
-    margin-top: auto;
-    margin-bottom: 50px;
-    transform-origin: 0;
-    transform: translateZ(3px) scale(0.625);
