--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -19,11 +19,16 @@
 
 	<main id='content'>
 
+		<div class='parallax__container'>
+			<div class='background'></div>
+			{{> story/intro }}
+			{{> story/layout }}
+			{{> story/grid }}
+			{{> story/modal }}
+		</div>
 
-		{{> story/intro }}
-		{{> story/layout }}
-		{{> story/grid }}
-		{{> story/modal }}
+
+
 
 
 
