fixed sizing issues

--- a/src/html/partials/story/nav.hbs
+++ b/src/html/partials/story/nav.hbs
@@ -1,6 +1,9 @@
 <section class='navigation' data-js='navigation'>
-    <div class='animal'></div>
-    <div class='globe globe--mobile' data-globe='mobile'>
-        <svg class='globe__svg--mobile'></svg>
+    <div class='navigation__container'>
+        <div class='animal'></div>
+        <div class='globe globe--mobile' data-globe='mobile'>
+            <svg class='globe__svg--mobile'></svg>
+        </div>
     </div>
+
 </section>
