--- a/src/css/story/nav.styl
+++ b/src/css/story/nav.styl
@@ -12,9 +12,20 @@
     overflow hidden
     +mq('bp-5')
         display none
+    .navigation__container 
+        width 100%
+        height 100%
+        position relative
+        display flex 
+        flex-direction row
+    .globe 
+        flex 1 0
+        margin-left 1rem
+        display fixed
     .animal 
         display flex 
         flex-direction column
+        flex 3 0
         .g-anno 
             opacity 0.3
             &.in-focus 
