--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -22,13 +22,15 @@
         display flex 
         flex-direction column
         margin 0 auto
+        max-width 1300px
 
         .g-island 
             display flex 
             flex-direction row
-            width 100%
-            &:nth-child(even)
-                margin-top -13vh
+            max-width 1300px
+            +mq('bp-5')
+                &:nth-child(even)
+                    margin-top -5em
 
         .annotation--desktop
             display none
@@ -76,13 +78,13 @@
             height auto
             position relative            
             display grid 
-            grid-template-columns repeat(2, 1fr)
+            // grid-template-columns repeat(2, 1fr)
             grid-column-gap -5px
             overflow hidden
             margin-top 0
             pointer-events none
             z-index auto
-            max-width 550px
+            max-width 700px
             +mq('bp-5')
                 grid-template-columns repeat(3, 1fr)
 
