fixing mobile nav

--- a/src/css/story/globe.styl
+++ b/src/css/story/globe.styl
@@ -1,5 +1,9 @@
 .globe
+
     &--desktop 
         position fixed 
         bottom 1rem
         left 1rem
+        display none
+        +mq('bp-5')
+            display block
