--- a/src/css/story/nav.styl
+++ b/src/css/story/nav.styl
@@ -13,19 +13,21 @@
     +mq('bp-5')
         display none
     .navigation__container 
-        width 100%
-        height 100%
         position relative
         display flex 
         flex-direction row
+        width 100%
     .globe 
-        flex 1 0
         margin-left 1rem
-        display fixed
+        position fixed
+        right 1rem
+        width 102px
     .animal 
         display flex 
         flex-direction column
-        flex 3 0
+        width 66%
+        padding-bottom 2rem
+
         .g-anno 
             opacity 0.3
             &.in-focus 
@@ -34,7 +36,7 @@
                 font-weight bold 
                 font-family $national
                 text-transform capitalize
-                set-type-size('x-large')
+                set-type-size('large')
                 margin-top 0.25rem
                 pointer-events all
 
