--- a/src/css/story/globe.styl
+++ b/src/css/story/globe.styl
@@ -1,5 +1,12 @@
 .globe
-
+    .path-sphere 
+        fill $primary
+    .path-country 
+        fill darken($bg, 15)
+    .marker 
+        fill $white
+        opacity 0.3
+        stroke-width 2px solid $white
     &--desktop 
         position fixed 
         bottom 1rem
