update dev version

--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -1,4 +1,7 @@
 /* CUSTOM STORY STYLE */
+body 
+    background linear-gradient(180deg, #8087C4 2.5%, #BCA8CC 17.5%, #DBB0C2 32.5%, #E5A7AA 50%, #DBB0C2 67.5%, #BCA8CC 82.5%, #8087C4 97.5%);
+
 .grid
     display flex 
     flex-wrap wrap 
