--- a/src/css/story/parallax.styl
+++ b/src/css/story/parallax.styl
@@ -4,14 +4,14 @@
     position relative
 
 .background
-    position fixed
+    position sticky
     width 100%
-    height 150%
-    min-height 100%
+    height inherit
+    min-height inherit
+    max-height inherit
     top 0
     left 0
-    background-image url('assets/images/clouds.jpg')
-    background-repeat repeat-y
+    background-image url('assets/images/clouds-1021.png')
+    background-repeat repeat
     z-index -1000
-    opacity 0.25
 
