update dev version

--- a/src/css/story/parallax.styl
+++ b/src/css/story/parallax.styl
@@ -4,7 +4,7 @@
     position relative
 
 .background
-    position sticky
+    position fixed
     width 100%
     height inherit
     min-height inherit
