update dev version

--- a/src/css/story/globe.styl
+++ b/src/css/story/globe.styl
@@ -1,9 +1,9 @@
 .globe
     z-index 100
     .path-sphere 
-        fill $primary
+        fill #8087C4
     .path-country 
-        fill darken($bg, 15)
+        fill #BCA8CC
     .marker 
         fill $white
         opacity 0.3
