modal with same facility names fixed

--- a/src/css/story/modal.styl
+++ b/src/css/story/modal.styl
@@ -64,6 +64,7 @@
                 color $white
                 set-type-size('small')
                 font-family $national-narrow
+                pointer-events none
 
 
     &__info 
