Antarctica now on globe

--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -120,13 +120,13 @@ body
                 display block
                 pointer-events auto
                 object-fit cover
-                filter saturate(0.25)
-                transition filter, transform 300ms ease-in-out
+                // filter saturate(0.25)
+                // transition filter, transform 300ms ease-in-out
                 cursor pointer
 
-                &.in-focus
-                    filter saturate(1)
-                    transition filter, transform 300ms ease-in-out
+                // &.in-focus
+                //     filter saturate(1)
+                //     transition filter, transform 300ms ease-in-out
 
 
         +mq('bp-5')
