--- a/src/css/story/intro.styl
+++ b/src/css/story/intro.styl
@@ -1,7 +1,8 @@
 .intro
 	margin 0 auto
-	padding 6rem 1rem 3rem 1rem
+	padding 2rem 1rem 3rem 1rem
 	text-align center
+	order 1
 
 	&__hed
 		max-width 60rem
