--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -21,10 +21,11 @@
 
 		<div class='parallax__container'>
 			<div class='background'></div>
-			{{> story/intro }}
+
 			{{> story/layout }}
 			{{> story/grid }}
 			{{> story/modal }}
+			{{> story/methods }}
 		</div>
 
 
