--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -19,6 +19,8 @@ body
     position relative
     max-width 1200px
     pointer-events none
+    padding-top 7rem
+    padding-bottom 4rem
 
 
     .islands 
@@ -27,6 +29,7 @@ body
         margin 0 auto
         padding 0 0.5rem
         // max-width 1300px
+
 
         .g-island 
             display flex 
