--- a/src/css/story/parallax.styl
+++ b/src/css/story/parallax.styl
@@ -13,5 +13,6 @@
     left 0
     background-image url('assets/images/clouds-1021.png')
     background-repeat repeat
+    opacity 1
     z-index -1000
 
