--- a/src/html/partials/story/modal.hbs
+++ b/src/html/partials/story/modal.hbs
@@ -16,6 +16,7 @@
         <div class='modal__info'>
             <h3 class='modal__info-animal'></h3>
             <p class='modal__info-facility'></p>
+            <a class='modal__info-full'></a>
             <p class='modal__info-help'>Help support <span class='facility'></span> by:</p>
             <ul>
                 <li><a class='donate'>Donating</a></li>
