--- a/src/css/story/intro.styl
+++ b/src/css/story/intro.styl
@@ -8,9 +8,13 @@
 		max-width 60rem
 		margin 0 auto
 		text-align center
-		set-type-size('xxxx-large')
+		set-type-size('xxxxx-large')
 		font-weight bold
 		font-family $national
+		display flex 
+		flex-direction column
+		&--welcome
+			set-type-size('xx-large')
 		
 	&__dek
 		max-width $column-width
@@ -30,6 +34,8 @@
 		margin 0 auto
 		margin-top 1rem
 		text-align center
+		set-type-size('medium')
+		font-family $national
 
 	&__text 
 		max-width $column-width
