adding baseline clouds

--- a/src/html/partials/story/layout.hbs
+++ b/src/html/partials/story/layout.hbs
@@ -3,5 +3,7 @@
         {{> story/intro }}
     </div>
     <div class='globe globe--desktop' data-globe='desktop'><svg class='globe__svg--desktop'></svg></div>
+    <div class='clouds__base'></div>
     {{> story/nav }}
+
 </section>
