--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -22,6 +22,17 @@ body
     padding-top 7rem
     padding-bottom 4rem
 
+    .clouds__base 
+        width 100%
+        height 30%
+        background-image url('assets/images/clouds-baseline.png')
+        position fixed 
+        left 0 
+        bottom 0
+        z-index 2000
+        opacity 1
+        mix-blend-mode color-dodge
+
 
     .islands 
         display flex 
