--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -15,15 +15,22 @@ body
 .map 
     display flex 
     flex-direction row
-    margin 0 auto
+    margin 3rem auto 0
     position relative
     max-width 1200px
     pointer-events none
     padding-top 7rem
     padding-bottom 4rem
 
+    .intro 
+        text-align left 
+
+        .sig 
+            font-style italic
+
     .clouds__base 
         width 100%
+        max-height 356px
         height 30%
         background-image url('assets/images/clouds-baseline.png')
         position fixed 
