--- a/src/css/story/globe.styl
+++ b/src/css/story/globe.styl
@@ -1,5 +1,10 @@
 .globe
     z-index 2500
+    opacity 1 
+    transition opacity 300ms ease-in-out
+    &.is-hidden 
+        opacity 0
+        transition opacity 300ms ease-in-out
     .path-sphere 
         fill #8087C4
     .path-country 
