--- a/src/css/story/nav.styl
+++ b/src/css/story/nav.styl
@@ -1,13 +1,13 @@
 .navigation
     position fixed 
     bottom 0
-    background-color darken($bg, 10)
+    background-color transparent
     color $primary
     width 100vw
     display flex 
     justify-content space-between
     padding 1rem 
-    z-index 20
+    z-index 2500
     max-height 150px
     overflow hidden
     +mq('bp-5')
